# Todo_APP

./: .gitignore  CLAUDE.md  LICENSE  README.md  add_due_date_column.py  constitution.md  package-lock.json  package.json  pyproject.toml  test_ai_chatbot_implementation.py  test_ai_chatbot_validation.py  test_api_structure.py  test_basic_api.py  test_create_task_feature.py  test_functionality.py  test_get_tasks_endpoint.py  test_status_functionality.py  vercel.json
.claude/: settings.local.json
.claude/agents/: .frontend-developer-agent.md.swp  architectural-agent.md
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: CLAUDE.md  Dockerfile  __init__.py  auth.py  db.py  error_handlers.py  logging_config.py  main.py  migrate.py  models.py  requirements.txt  test_auth_flow.py
backend/ai/: agent.py
backend/mcp/: conversation_manager.py  server.py
backend/migrations/: env.py
backend/routes/: __init__.py  admin.py  ai_chat.py  auth.py  tasks.py
backend/services/: ai.py  ai_chat.py  conversations.py  tasks.py
frontend/: .env.local  CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
history/adr/: 0001-frontend-technology-stack.md  0002-backend-technology-stack.md  0003-authentication-and-authorization.md  0004-data-architecture.md
k8s/: DEPLOYMENT_DOCS.md  README.md  deploy.sh  test-services.sh
plans/: ai-chatbot-implementation.md  k8s-deployment-plan.md
specs/: architecture.md  overview.md
specs/001-arch-spec-integration/: api-extension-points.md  data-model.md  (+5 more)
src/: __init__.py
(+61 files in other folders)
